--- a/inst/doc/SIM.bib
+++ b/inst/doc/SIM.bib
@@ -56,8 +56,8 @@
 	author = 	{Menezes, RX and Boetzer, M and Sieswerda, M and van Ommen, GJ and Boer, JM},
 	title = {Integrated statistical analysis to identify associations between DNA copy
 	number and gene expression in microarray data},
-	journal = {Submitted.},
-	year = {2008}, 
-	volume = {},
-	pages = {}
+	journal = {BMC Bioinformatics.},
+	year = {2009}, 
+	volume = {10},
+	pages = {203}
 }
